[gd_scene load_steps=11 format=4 uid="uid://bx18xpobi015t"]

[ext_resource type="Script" uid="uid://d0qmskn58yta5" path="res://game.gd" id="1_e2o6t"]
[ext_resource type="PackedScene" uid="uid://c31qphkaixitt" path="res://knot_tile_map.tscn" id="2_feb5d"]
[ext_resource type="Texture2D" uid="uid://b2vwdgbn4qkas" path="res://assets/board.svg" id="2_j5wjh"]
[ext_resource type="Script" uid="uid://dsjklsc2bkfnq" path="res://players.gd" id="3_7jktm"]
[ext_resource type="PackedScene" uid="uid://cea3413amktgj" path="res://hand.tscn" id="4_fc0e3"]
[ext_resource type="PackedScene" uid="uid://btfna526b0tbe" path="res://menus/pause_menu.tscn" id="5_7jktm"]
[ext_resource type="PackedScene" uid="uid://cqbof5icocs86" path="res://menus/end_screen.tscn" id="6_ryrav"]
[ext_resource type="Script" uid="uid://ol8gxiuwp4w4" path="res://score_calculator.gd" id="7_eow3j"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vef74"]
texture = ExtResource("2_j5wjh")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_ryrav"]
tile_size = Vector2i(200, 200)
sources/1 = SubResource("TileSetAtlasSource_vef74")

[node name="Game" type="Node2D"]
script = ExtResource("1_e2o6t")

[node name="Board" type="TileMapLayer" parent="."]
position = Vector2(651, 217)
scale = Vector2(0.3, 0.3)
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAIAAAABAAAAAQAAAAIAAAACAAAAAQAAAAIAAAADAAAAAQAAAAIAAAAEAAAAAQAAAAIAAAAFAAAAAQAAAAIAAAAGAAAAAQAAAAIAAAAHAAAAAQAAAAIAAAAIAAAAAQAAAAIAAAAAAAEAAQAAAAIAAAAAAAIAAQAAAAIAAAAAAAMAAQAAAAIAAAAAAAQAAQAAAAIAAAAAAAUAAQAAAAIAAAAAAAYAAQAAAAIAAAAAAAcAAQAAAAIAAAAAAAgAAQAAAAIAAAAAAAkAAQAAAAIAAAABAAEAAQAAAAIAAAABAAIAAQAAAAIAAAABAAMAAQAAAAIAAAABAAQAAQAAAAIAAAABAAUAAQAAAAIAAAABAAYAAQAAAAIAAAABAAcAAQAAAAIAAAABAAgAAQAAAAIAAAABAAkAAQAAAAIAAAACAAEAAQAAAAIAAAACAAIAAQAAAAIAAAACAAMAAQAAAAIAAAACAAQAAQAAAAIAAAACAAUAAQAAAAIAAAACAAYAAQAAAAIAAAACAAcAAQAAAAIAAAACAAgAAQAAAAIAAAACAAkAAQAAAAIAAAADAAEAAQAAAAIAAAADAAIAAQAAAAIAAAADAAMAAQAAAAIAAAADAAQAAQAAAAIAAAADAAUAAQAAAAIAAAADAAYAAQAAAAIAAAADAAcAAQAAAAIAAAADAAgAAQAAAAIAAAADAAkAAQAAAAIAAAAEAAEAAQAAAAIAAAAEAAIAAQAAAAIAAAAEAAMAAQAAAAIAAAAEAAQAAQAAAAIAAAAEAAUAAQAAAAIAAAAEAAYAAQAAAAIAAAAEAAcAAQAAAAIAAAAEAAgAAQAAAAIAAAAEAAkAAQAAAAIAAAAFAAEAAQAAAAIAAAAFAAIAAQAAAAIAAAAFAAMAAQAAAAIAAAAFAAQAAQAAAAIAAAAFAAUAAQAAAAIAAAAFAAYAAQAAAAIAAAAFAAcAAQAAAAIAAAAFAAgAAQAAAAIAAAAFAAkAAQAAAAIAAAAGAAEAAQAAAAIAAAAGAAIAAQAAAAIAAAAGAAMAAQAAAAIAAAAGAAQAAQAAAAIAAAAGAAUAAQAAAAIAAAAGAAYAAQAAAAIAAAAGAAcAAQAAAAIAAAAGAAgAAQAAAAIAAAAGAAkAAQAAAAIAAAAHAAEAAQAAAAIAAAAHAAIAAQAAAAIAAAAHAAMAAQAAAAIAAAAHAAQAAQAAAAIAAAAHAAUAAQAAAAIAAAAHAAYAAQAAAAIAAAAHAAcAAQAAAAIAAAAHAAgAAQAAAAIAAAAHAAkAAQAAAAIAAAAIAAEAAQAAAAIAAAAIAAIAAQAAAAIAAAAIAAMAAQAAAAIAAAAIAAQAAQAAAAIAAAAIAAUAAQAAAAIAAAAIAAYAAQAAAAIAAAAIAAcAAQAAAAIAAAAIAAgAAQAAAAIAAAAIAAkAAQAAAAIAAAAJAAAAAQAAAAIAAAAJAAEAAQAAAAIAAAAJAAIAAQAAAAIAAAAJAAMAAQAAAAIAAAAJAAQAAQAAAAIAAAAJAAUAAQAAAAIAAAAJAAYAAQAAAAIAAAAJAAcAAQAAAAIAAAAJAAgAAQAAAAIAAAAJAAkAAQAAAAIAAAAAAP//AQAAAAEAADABAP//AQAAAAEAADACAP//AQAAAAEAADADAP//AQAAAAEAADAEAP//AQAAAAEAADAFAP//AQAAAAEAADAGAP//AQAAAAEAADAHAP//AQAAAAEAADAIAP//AQAAAAEAADAJAP//AQAAAAEAADAAAAoAAQAAAAEAADABAAoAAQAAAAEAADACAAoAAQAAAAEAADADAAoAAQAAAAEAADAEAAoAAQAAAAEAADAFAAoAAQAAAAEAADAGAAoAAQAAAAEAADAHAAoAAQAAAAEAADAIAAoAAQAAAAEAADAJAAoAAQAAAAEAADAKAAAAAQAAAAEAAGAKAAEAAQAAAAEAAGAKAAIAAQAAAAEAAGAKAAMAAQAAAAEAAGAKAAQAAQAAAAEAAGAKAAUAAQAAAAEAAGAKAAYAAQAAAAEAAGAKAAcAAQAAAAEAAGAKAAgAAQAAAAEAAGAKAAkAAQAAAAEAAGD//wAAAQAAAAEAAGD//wEAAQAAAAEAAGD//wIAAQAAAAEAAGD//wMAAQAAAAEAAGD//wQAAQAAAAEAAGD//wUAAQAAAAEAAGD//wYAAQAAAAEAAGD//wcAAQAAAAEAAGD//wgAAQAAAAEAAGD//wkAAQAAAAEAAGD/////AQAAAAAAAAAKAP//AQAAAAAAAFAKAAoAAQAAAAAAADD//woAAQAAAAAAAGA=")
tile_set = SubResource("TileSet_ryrav")

[node name="KnotTileMap" parent="Board" instance=ExtResource("2_feb5d")]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Players" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_7jktm")

[node name="Bottom" parent="GUI/Players" instance=ExtResource("4_fc0e3")]
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Top" parent="GUI/Players" instance=ExtResource("4_fc0e3")]
layout_mode = 1
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_vertical = 1
location = Vector2i(0, -1)
colour_index = 1

[node name="Left" parent="GUI/Players" instance=ExtResource("4_fc0e3")]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 2
vertical = true
location = Vector2i(-1, 0)
colour_index = 2

[node name="Right" parent="GUI/Players" instance=ExtResource("4_fc0e3")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 2
vertical = true
location = Vector2i(1, 0)
colour_index = 3

[node name="PauseMenu" parent="." instance=ExtResource("5_7jktm")]
visible = false

[node name="EndScreen" parent="." instance=ExtResource("6_ryrav")]
visible = false

[node name="ScoreCalculator" type="Node2D" parent="."]
visible = false
script = ExtResource("7_eow3j")

[node name="Sound" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sound"]

[connection signal="game_over" from="GUI/Players" to="." method="_on_game_over"]
[connection signal="new_tile" from="GUI/Players/Bottom" to="." method="_on_new_tile"]
[connection signal="place_tile" from="GUI/Players/Bottom" to="." method="_on_place_tile"]
[connection signal="remove_tile" from="GUI/Players/Bottom" to="." method="_on_remove_tile"]
[connection signal="turn_finished" from="GUI/Players/Bottom" to="GUI/Players" method="_on_turn_finished"]
[connection signal="new_tile" from="GUI/Players/Top" to="." method="_on_new_tile"]
[connection signal="place_tile" from="GUI/Players/Top" to="." method="_on_place_tile"]
[connection signal="remove_tile" from="GUI/Players/Top" to="." method="_on_remove_tile"]
[connection signal="turn_finished" from="GUI/Players/Top" to="GUI/Players" method="_on_turn_finished"]
[connection signal="new_tile" from="GUI/Players/Left" to="." method="_on_new_tile"]
[connection signal="place_tile" from="GUI/Players/Left" to="." method="_on_place_tile"]
[connection signal="remove_tile" from="GUI/Players/Left" to="." method="_on_remove_tile"]
[connection signal="turn_finished" from="GUI/Players/Left" to="GUI/Players" method="_on_turn_finished"]
[connection signal="new_tile" from="GUI/Players/Right" to="." method="_on_new_tile"]
[connection signal="place_tile" from="GUI/Players/Right" to="." method="_on_place_tile"]
[connection signal="remove_tile" from="GUI/Players/Right" to="." method="_on_remove_tile"]
[connection signal="turn_finished" from="GUI/Players/Right" to="GUI/Players" method="_on_turn_finished"]
